// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with multi expenses 1`] = `
<div>
  <h1>
    Viewing 
    10
     
    expenses
    . Totalling
    $0.10
  </h1>
</div>
`;

exports[`should render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
    . Totalling
    $0.24
  </h1>
</div>
`;
